# FaucetAppEthereum

./: README.md  SUMMARY.md  genesis.json  pyproject.toml  run.sh
back/: app.js  package.json  server_app.js
back/docker commands/: docker_1NodeCreation  docker_2NodeInicializtion  docker_3NodeRun
config/: constants.js
front/src/: App.jsx  FaucetApp.jsx  main.jsx
group-1/: database-connection-guide.md
node/: genesis.json
reports/: IssuesToShoot.md  IssuesToTroubleshoot.md
test/: test_connection.py
